# Python-OA

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/cern_oa/: dep_graph.py
src/cern_oa/tests/: test_dep_graph.py
tests/: test_dep_graph.py
